# logman

./: .gitignore  README.md  TODO.txt  logman.cabal
app/: Main.hs
src/: Filters.hs  LogEntry.hs  LogFile.hs  Options.hs  Output.hs  Processor.hs  Test.hs
src/LogMan/: Filters.hs  LogEntry.hs  LogFile.hs  Options.hs  Output.hs  Processor.hs  Utils.hs
test/: Spec.hs
